--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: 1.0.{build}
 image: Visual Studio 2015
 build_script:
-  - msbuild csharp/SplitToc.sln /p:Configuration=Release
+  - msbuild ./csharp/SplitToc.sln /p:Configuration=Release
 test: off
 on_success:
   - powershell ./csharp/tools/pack.ps1
