--- a/csharp/tools/nuspec/SplitToc.nuspec
+++ b/csharp/tools/nuspec/SplitToc.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>SplitToc</id>
-    <version>1.0.0</version>
+    <version>1.0.2</version>
     <title>SplitToc</title>
     <authors>Microsoft</authors>
     <owners>Microsoft</owners>
@@ -11,7 +11,7 @@
     <projectUrl>https://github.com/qinezh/splitToc</projectUrl>
     <description>Tool to split toc.yml into namespace level</description>
     <copyright>Copyright 2015-2017</copyright>
-    <tags>docascode docfx</tags>
+    <tags>docascode docfx openpublish</tags>
   </metadata>
   <files>
     <file src="**" target="tools/" exclude="**/*.pdb"/>
