--- a/csharp/tools/nuspec/SplitToc.nuspec
+++ b/csharp/tools/nuspec/SplitToc.nuspec
@@ -14,6 +14,6 @@
     <tags>docascode docfx openpublish</tags>
   </metadata>
   <files>
-    <file src="**" target="tools/" exclude="**/*.pdb"/>
+    <file src="..\..\bin\Release\*" target="tools" exclude="**\*.pdb;**\*.xml"/>
   </files>
 </package>
