Copy run.ps1 in nupkg

--- a/csharp/tools/nuspec/SplitToc.nuspec
+++ b/csharp/tools/nuspec/SplitToc.nuspec
@@ -15,5 +15,6 @@
   </metadata>
   <files>
     <file src="..\..\bin\Release\*" target="tools" exclude="**\*.pdb;**\*.xml"/>
+    <file src="..\..\tools\run.ps1" target="tools"/>
   </files>
 </package>
